# orbit-work

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-schema.yml  ci.yml  deploy.yml
backend/: package.json
backend/src/: app.ts  index.ts
backend/src/controllers/: applications.ts  auth.ts  bounties.ts  users.ts
backend/src/graphql/: schema.ts
backend/src/middleware/: auth.ts  validate.ts
backend/src/models/: application.ts  bounty.ts
backend/src/routes/: applications.ts  auth.ts  bounties.ts  users.ts
backend/src/services/: db.ts  escrow.ts  reputation.ts
contracts/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
database/: schema.sql
database/migrations/: 001_initial.sql  002_credit_transactions.sql
docs/: API.md  ARCHITECTURE.md  CONTRACTS.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/bounties/: page.tsx
frontend/src/app/bounties/[id]/: page.tsx
frontend/src/components/: ApolloWrapper.tsx  BountyCard.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: stellar.ts
frontend/src/styles/: globals.css
lib/graphql/: schema.graphql
scripts/: seed.js  sync-schema.js
